# monad

./: .gitignore  .gitmodules  README.md  elyon.toml  pyproject.toml
bindings/: __init__.py  runtime_client.py
cli/: banner.py  context.py  main.py  tui.py
cli/commands/: __init__.py  agents_cmd.py  broadcast_cmd.py  compile_cmd.py  doctor_cmd.py  init_cmd.py  project_cmd.py  providers_cmd.py  repair_cmd.py  trace_cmd.py
compiler/: __init__.py  zero_compiler.py
configs/: elyon.example.toml  elyon.toml
orchestration/: __init__.py  agent_detector.py  agents.py  config.py  engine.py  logging.py  project.py
orchestration/adapters/: base.py  registry.py
orchestration/cache/: __init__.py  prefix_cache.py
orchestration/diff/: __init__.py  engine.py
orchestration/events/: __init__.py  models.py  sqlite_store.py  store.py
orchestration/knowledge/: __init__.py  chunker.py  embedder.py  index.py  store.py
orchestration/minify/: __init__.py  minifier.py  token_counter.py
orchestration/routing/: __init__.py  agent_routing.py  intent.py
providers/: __init__.py  base.py  gateway.py  http_provider.py  registry.py
providers/adapters/: __init__.py  anthropic.py  base.py  generic.py  mock.py  openai.py
providers/middleware/: __init__.py  cache.py  core.py  logging.py  rate_limit.py  retry.py
repair/: __init__.py  applier.py  executor.py  planner.py
runtime/: Cargo.toml
runtime/src/: executor.rs  main.rs  models.rs  sandbox.rs
sandbox/: __init__.py  audit.py  crypto.py  policy.py  security.py
scripts/: zero
telemetry/: metrics.py
tests/: test_adapters.py  test_agent_detector.py  test_agent_routing.py  test_applier.py  test_broadcast.py  test_compiler_parser.py  test_compiler_zero.py  test_crypto.py  test_diff_engine.py  test_engine_runtime.py  test_engine_timeout.py  test_event_store.py  test_gateway.py  test_http_provider.py  test_intent_router.py  test_middleware.py  test_prefix_cache.py  test_project.py  test_prompt_minifier.py  test_repair_planner.py  test_sandbox_policy_v2.py  test_security.py  test_security_audit.py  test_session.py  test_session_memory.py  test_sqlite_event_store.py  test_structured_messages.py  test_summarizer.py  test_telemetry.py  test_vector_rag.py  test_zerolang.py
tests/benchmarks/: conftest.py  test_baseline.py  test_context_intelligence.py  test_provider_protocol.py  test_session_memory.py
