[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elyon"
version = "0.1.0"
description = "Deterministic multi-agent CLI workspace for autonomous software engineering"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Elyon Contributors" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "structlog>=24.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.4"
]

[project.scripts]
elyon = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "cli*",
  "orchestration*",
  "bindings*",
  "compiler*",
  "diagnostics*",
  "sandbox*",
  "state*",
  "providers*",
  "repair*",
  "telemetry*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
