[package]
name = "monad-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Runtime execution core and TUI for Monad"

[lib]
name = "monad_runtime"
path = "src/lib.rs"

[[bin]]
name = "monad-runtime"
path = "src/main.rs"

[[bin]]
name = "monad-tui"
path = "src/bin/monad-tui.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "sync", "io-std"] }
tracing = "0.1"
ratatui = { version = "0.29", features = ["all-widgets"], optional = true }
crossterm = { version = "0.28", optional = true }
futures = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = ["runtime"]
runtime = []
tui = ["ratatui", "crossterm", "futures", "chrono"]

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization (LTO)
codegen-units = 1    # Reduce parallel code generation units to increase optimization
panic = "abort"      # Remove panic string formatting/backtrace code
strip = true         # Automatically strip symbols from the binary
