[package]
name = "elyon-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime execution core and TUI for Elyon"

[lib]
name = "elyon_runtime"
path = "src/lib.rs"

[[bin]]
name = "elyon-runtime"
path = "src/main.rs"

[[bin]]
name = "elyon-tui"
path = "src/bin/elyon-tui.rs"
required-features = ["tui"]

[features]
default = []
tui = ["ratatui", "crossterm", "tokio/full", "sysinfo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "process", "sync", "time", "io-util", "io-std"] }
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }
thiserror = "1.0"
futures = "0.3"
reqwest = { version = "0.13.3", features = ["json"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
sysinfo = { version = "0.33", optional = true }
